--- a/2020-06-10-crypt.md
+++ b/2020-06-10-crypt.md
@@ -23,9 +23,9 @@ XOR is applied bit-by-bit to its two operands. The corresponding output bit is s
 
 This method is simple, secure and *perfectly symmetrical*: exactly the same operation with the same key decrypts the encrypted text back to its original form.
 
-As long as the key is random, of the same length as the file being encrypted, and specific for just that one file, then this method is **. Any attacker would have to guess correctly every bit of the key file, which is not any easier than guessing the entire original content of the encrypted file. Given that the key is cryptographically random, it is actually even harder.
+As long as the key is random, of the same length as the file being encrypted, and specific for just that one file, then this method (one-time cipher) is *theoretically unbreakable*. Any attacker would have to guess correctly every bit of the key file, which is not any easier than guessing the entire original content of the encrypted file. Given that the key is cryptographically random, it is actually even harder.
 
-Granted, relatively short public and private keys for asymmetric  encryption do have certain practical advantages. Most of all the ease of disseminating the public keys over the internet.
+Apart from being easier to break, relatively short public and private keys for asymmetric  encryption do have certain practical advantages over XOR. Above all, it is their ease of dissemination over the internet.
 
 However, there are many encryption applications, where we may not want anyone else encrypting and/or reading our data.
 For example, when storing our private data files "on the cloud". 
@@ -64,7 +64,7 @@ In order for electronic voting to be acceptable, it must fulfil  these criteria:
 
 1. Verifiability of the vote: the voter must be able to check that the vote is recorded as entered and as intended and change it if necessary.
 
-	The voter then generates his own 'voting' key on his own device, encrypts his vote with it and enters it into the online system. Using his access key and the voting key again, he can subsequently verify his own vote. He can even change his vote by repeating the voting process (at any time before the election is closed).  This will all be handled transparently by a simple to use local app. It is important that the app does not send the voting encryption key anywhere but uses it only locally at this stage.
+	The voter then generates his own voting key on his own device, encrypts his vote with it, and using his access key enters the vote into the online system. Using his access key and the voting key again, he can subsequently verify his own vote. He can even change his vote by repeating the voting process (at any time before the election is closed).  This will all be handled transparently by a simple to use local app. It is important that the app does not send the voting encryption key anywhere but uses it only locally at this stage.
 	
 1. Security: nobody should be able to 'hack the system'. 
 
@@ -84,7 +84,7 @@ In order for electronic voting to be acceptable, it must fulfil  these criteria:
 	  
 	  One good thing about e-voting is that we can have plenty of recounts without any major inconvenience.
 	  
-	  Finally, the system can be activated again but now in read-only mode. The changing of the votes is now disabled but any voter can again verify that his vote is still there and intact. This amounts to very effective spot-checks, as any random voters might undertake this.
+	  Finally, the system can be activated again but now in read-only mode. The changing of the votes is now disabled but any voter can again verify that his vote is still there and intact. This amounts to very effective spot-checks, as any random voters might undertake to do this. Such a spot check would reveal any change to the vote done between the closing of the voting and the results being announced (using his voting key that he has sent in to enable the counting). However, given that the files are write protected and encrypted by the scrutineers, this would be very difficult.
 	
 ### Conclusion
 
