--- a/2020-06-10-crypt.md
+++ b/2020-06-10-crypt.md
@@ -84,7 +84,7 @@ In order for electronic voting to be acceptable, it must fulfil  these criteria:
 	  
 	  One good thing about e-voting is that we can have plenty of recounts without any major inconvenience.
 	  
-	  Finally, the system can be activated again but now in read-only mode. The changing of the votes is now disabled but any voter can again verify that his vote is still there and intact. This amounts to very effective spot-checks, as any random voters might undertake to do this. Such a spot check would reveal any change to the vote done between the closing of the voting and the results being announced (using his voting key that he has sent in to enable the counting). However, given that the files are write protected and encrypted by the scrutineers, this would be very difficult.
+	  Finally, the system can be activated again, now in read-only mode. The changing of the votes is disabled but the voters can again verify that their votes are still there and intact. This amounts to very effective spot-checks, as any random voters can undertake to do this. Such a spot check would reveal any change to the vote done between the closing of the voting and the results being announced (presumably using the voting key that the voter  has sent in to enable the counting). However, given that the files are write protected and encrypted by the scrutineers, this should be impossible.
 	
 ### Conclusion
 
