--- a/2020-06-10-crypt.md
+++ b/2020-06-10-crypt.md
@@ -88,7 +88,7 @@ In order for electronic voting to be acceptable, it must fulfil  these criteria:
 	
 ### Conclusion
 
-Starting with a simple encryption, efficiently implemented, we have built up to a full blown model proposal for e-democracy. Any comments are welcome!
+Starting with a simple encryption, efficiently implemented, we have built up to a full blown model proposal for safe e-democracy. Any comments are welcome!
 
 
 
