timing is everything

--- a/2020-07-19-timing.md
+++ b/2020-07-19-timing.md
@@ -55,7 +55,6 @@ $(( $G-($(date +%s)-$S)%$G-$A ))
 where
 
 - the `bash` variables in this expression, `$G,$S,$A`, are supplied to `sleeper` as option values. Any that are left unspecified are assigned default values.
-
 - `$S` is the start offset for the first cron invocation in any hour, in seconds.
 - `$G` is the gap between subsequent regular cron invocations `($S < $G)`.
 - `$(date +%s)` returns the `unix time` (continuous count of seconds since 1.1.1970 till present). 
@@ -81,6 +80,6 @@ if [ $R ]; then
   " >> $PD/data/sleepercronlog\n" | crontab -u root -  
 fi
 ```
-Note how the `$SM` and `$GM` parameters (`$S` and `$M` translated into minutes) map directly into the first entry (for minutes) in the `crontab` table: `$SM-59/$GM`. We activate the cron by piping the two lines crontab as standard input into `crontab -u root -`, Meaning user (owner) of this crontab will be root.
+Note how the `$SM` and `$GM` parameters (`$S` and `$M` translated into minutes) map directly into the first entry (for minutes) in the `crontab` table: `$SM-59/$GM`. We activate the cron by piping the two lines crontab as standard input into `crontab -u root -`. Meaning that the user (owner) of this crontab will be `root`.
 
-I had permissions problems until I have put `sudo` in front of the invocations of `sleeper` and `rtcwake`. Which does seem rather superfluous, considering that the script is already invoked with `sudo`.
+I had permissions problems until I have put `sudo` in front of the invocations of `sleeper` and `rtcwake` within `sleeper`. Which does seem rather superfluous, considering that the script is already invoked with `sudo`.
