minor edit of  sleeper

--- a/2020-07-19-timing.md
+++ b/2020-07-19-timing.md
@@ -82,7 +82,7 @@ fi
 ```
 Note how the `$SM` and `$GM` parameters (`$S` and `$M` translated into minutes) map directly into the first entry (for minutes) in the `crontab` table: `$SM-59/$GM`. We activate the cron by piping the two lines crontab as standard input into `crontab -u root -`. Meaning that the user (owner) of this crontab will be `root`.
 
-I had permissions problems until I have put `sudo` in front of the invocations of `sleeper` and `rtcwake` within `sleeper`. Which does seem rather superfluous, considering that the script was already invoked with `sudo`.
+I had permissions problems until I have put `sudo` also in front of the invocations of `sleeper` and `rtcwake` in `sleeper`. This fussiness took me by a surprise, considering that the script and the crontab were already invoked with `sudo`.
 
 ## References
 The full source is here: [sleeper](https://github.com/liborty/JCron/blob/master/sleeper)
