minor edit of  sleeper

--- a/2020-07-19-timing.md
+++ b/2020-07-19-timing.md
@@ -68,7 +68,7 @@ Now we are at the stage where we can invoke `sudo sleeper` manually at any time.
 
 Ideally, we would want to call `sudo sleeper` at the end of our main recurring tasks crontab script. However, because of the difficulties with permissions and security discussed above, we will make it build its own `root` crontab to run alongside the main user one. We add option -r for this purpose: `sudo sleeper -r` needs to be invoked only once, at the beginning. Thereafter, `sleeper` will be periodically reinvoked from its own crontab. To cancel and regain permanently wakeful state, use `sudo sleeper -w` (have to act quickly, while still awake).
 
-One subtle problem with this is that `sleeper` can only be invoked by `crontab` at whole minutes, so when the usual tasks are finished, we may have to wait a little (and our calculation above is no longer strictly necessary). My main task, written in super fast Rust, usually finishes in a few seconds and the computer then has to idle till one whole minute is up. In practice, this is not much of a problem and it does give us time to issue `sudo sleeper -w` when needed. Here is the -r part of the script:
+One subtle problem with this is that `sleeper` can only be invoked by `crontab` at whole minutes, so when the usual tasks are finished, we have to wait a little (and our precise calculation of the remaining sleep time above is no longer strictly necessary). My main task, written in super fast Rust, usually finishes in a few seconds and the computer then has to idle till one whole minute is up. In practice, this is not much of a problem and it does give us time to issue `sudo sleeper -w` when needed. Should your applications need more than one minute to run, then it will be necessary to add the relevant number of "waking" minutes, rounded up. Here is the -r part of the script:
 
 ```bash
 # set up and start crontab which will suspend one minute after the regular $S+$G time
@@ -80,9 +80,11 @@ if [ $R ]; then
   " >> $PD/data/sleepercronlog\n" | crontab -u root -  
 fi
 ```
-Note how the `$SM` and `$GM` parameters (`$S` and `$M` translated into minutes) map directly into the first entry (for minutes) in the `crontab` table: `$SM-59/$GM`. We activate the cron by piping the two lines crontab as standard input into `crontab -u root -`. Meaning that the user (owner) of this crontab will be `root`.
+Note how the `$SM` and `$GM` parameters (`$S` and `$M` translated into minutes) map directly into the first entry (for minutes) in the `crontab` table: `$SM-59/$GM`. Similar thing can be done for hours and days in the following fields, should longer intervals be needed. 
 
-I had permissions problems until I have put `sudo` also in front of the invocations of `sleeper` and `rtcwake` in `sleeper`. This fussiness took me by a surprise, considering that the script and the crontab were already invoked with `sudo`.
+Cron is activated by piping the two lines crontab as standard input (-) into `crontab -u root -`. Meaning that the user (owner) of this crontab will be `root`.
+
+I had permission problems until I have put `sudo` also in front of the invocations of `sleeper` and `rtcwake` in `sleeper`. This fussiness took me by a surprise, considering that the script and the crontab were already invoked with `sudo`.
 
 ## References
 The full source is here: [sleeper](https://github.com/liborty/JCron/blob/master/sleeper)
