--- a/2020-07-19-timing.md
+++ b/2020-07-19-timing.md
@@ -84,7 +84,7 @@ Note how the `$SM` and `$GM` parameters (`$S` and `$M` translated into minutes) 
 
 Cron is activated by piping the two lines crontab as standard input (-) into `crontab -u root -`. Meaning that the user (owner) of this crontab will be `root`.
 
-I had permission problems until I have put `sudo` also in front of the invocations of `sleeper` and `rtcwake` in `sleeper`. This fussiness took me by a surprise, considering that the script and the crontab were already invoked with `sudo`.
+I had permission problems until I have put `sudo` also in front of the invocations of `sleeper` and `rtcwake` in `sleeper`. This fussiness took me by surprise, considering that the script and the crontab were already invoked with `sudo`.
 
 ## References
 The full source is here: [sleeper](https://github.com/liborty/JCron/blob/master/sleeper)
