started new blog

--- a/2021-11-24-bashing2.md
+++ b/2021-11-24-bashing2.md
@@ -69,10 +69,13 @@ We use logical or `||` instead of `if`. It only executes the last command, unset
 
 ## Link References
 
-1 ([1]) TokenCrypt, github repository.
-2 ([2]) Encryption and E-Democracy, previous blog.  
-3 ([3]) `ncrpt`, a bash script within ([1]).  
-4 ([4]) `dcrpt`, a bash script within ([1]).
+([1]) TokenCrypt, github repository.
+
+([2]) Encryption and E-Democracy, previous blog.
+
+([3]) `ncrpt`, a bash script within ([1]).
+  
+([4]) `dcrpt`, a bash script within ([1]).
 
 [1]: https://github.com/liborty/TokenCrypt "TokenCrypt"
 [2]: https://oldmill.cz/2020-06-10-crypt.html "Encryption and E-Democracy"  
